# CodingTrain.c

./: .clang-format  .gitignore  CMakeLists.txt
inc/helpers/: helpers.h  math.h  random.h
src/: CMakeLists.txt
src/c001_starfield/: CMakeLists.txt  constants.h  main.c  star.c  star.h
src/helpers/: CMakeLists.txt  math.c  random.c
